# mlops-with-mlflow

./: .gitignore  MLProject  README.md  main.py  pyproject.toml  python_env.yaml  run-pipeline.sh
.github/workflows/: model-deployment.yml
data/processed/: test.csv  train.csv  validate.csv
fastapi-app/: .env  Dockerfile  app.py  config.py  models.py  requirements.txt  routes.py  schemas.py  service.py
models/random_forest/v1/: model.pkl
scripts/: evaluate_model.py  prepare_data.py  train_model.py
